[tool.poetry]
name = "pylhctrl"
version = "1.0.0"
description = "Power management of Valve v1 lighthouses over Bluetooth LE"
authors = ["risa2000 <1336835+risa2000@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
bluepy = "^1.3.0"

[tool.poetry.scripts]
lhctrl = "pylhctrl.lhctrl:run_main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
